--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.probuilder": "5.2.2",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "14.0.10",
